syntax = "proto3";

package websocket.service.v1;

option go_package = "actor/api/gen/go/websocket/service/v1;websocketpb";

import "google/protobuf/timestamp.proto";
import "websocket/service/v1/model.proto";

// 命令类型枚举 (不同组路由步距 600)
enum CommandType {
  COMMAND_TYPE_UNKNOWN = 0;

  // 基础命令 (1-599)
  COMMAND_TYPE_INIT = 1;                // 初始化连接
  COMMAND_TYPE_ECHO = 2;                // 心跳/回显
  COMMAND_TYPE_NOTIFY = 3;              // 通知
  COMMAND_TYPE_RESYNC = 4;              // 重新同步
  COMMAND_TYPE_ERROR = 5;               // 错误响应

  // Actor 生命周期命令 (600-1199) - Actor 相当于服务器
  COMMAND_TYPE_ACTOR_REGISTER = 600;    // Actor 注册
  COMMAND_TYPE_ACTOR_UNREGISTER = 601;  // Actor 注销
  COMMAND_TYPE_ACTOR_HEARTBEAT = 602;   // Actor 心跳
  COMMAND_TYPE_ACTOR_STATUS = 603;      // Actor 状态更新
  COMMAND_TYPE_ACTOR_LIST = 604;        // 获取 Actor 列表

  // Robot 控制命令 (1200-1799) - Robot 是机器人
  COMMAND_TYPE_ROBOT_START = 1200;      // 启动 Robot
  COMMAND_TYPE_ROBOT_STOP = 1201;       // 停止 Robot
  COMMAND_TYPE_ROBOT_CONFIG = 1202;     // 配置 Robot
  COMMAND_TYPE_ROBOT_COMMAND = 1203;    // 发送命令给 Robot
  COMMAND_TYPE_ROBOT_RESULT = 1204;     // Robot 命令结果

  // 服务器信息命令 (1800-2399)
  COMMAND_TYPE_SERVER_SYNC = 1800;      // 服务器信息同步
  COMMAND_TYPE_SERVER_STATUS = 1801;    // 服务器状态

  // 告警命令 (2400-2999)
  COMMAND_TYPE_ALERT_SEND = 2400;       // 发送告警
  COMMAND_TYPE_ALERT_ACK = 2401;        // 确认告警

  // 用户命令 (3000-3599)
  COMMAND_TYPE_USER_KICK = 3000;        // 踢出用户
  COMMAND_TYPE_USER_BROADCAST = 3001;   // 广播消息

  // 机器人同步命令 (3600-4199)
  COMMAND_TYPE_ROBOT_SYNC = 3600;       // 机器人同步
}

// 主命令消息
message Command {
  CommandType type = 1;                       // 命令类型
  uint64 seq = 2;                             // 序列号（用于去重和重试）
  string request_id = 3;                      // 请求ID（用于请求-响应匹配）
  optional ErrorMessage error = 4;            // 错误信息
  repeated Event events = 5;                  // 事件列表
  google.protobuf.Timestamp timestamp = 6;    // 时间戳

  oneof payload {
    // 基础命令
    InitCmd init = 11;
    EchoCmd echo = 12;
    NotifyCmd notify = 13;
    ResyncCmd resync = 14;

    // Actor 生命周期
    ActorRegisterCmd actor_register = 21;
    ActorUnregisterCmd actor_unregister = 22;
    ActorHeartbeatCmd actor_heartbeat = 23;
    ActorStatusCmd actor_status = 24;
    ActorListCmd actor_list = 25;

    // Robot 控制
    RobotStartCmd robot_start = 31;
    RobotStopCmd robot_stop = 32;
    RobotConfigCmd robot_config = 33;
    RobotCommandCmd robot_command = 34;
    RobotResultCmd robot_result = 35;

    // 服务器信息
    ServerSyncCmd server_sync = 41;
    ServerStatusCmd server_status = 42;

    // 告警
    AlertSendCmd alert_send = 51;
    AlertAckCmd alert_ack = 52;

    // 用户
    UserKickCmd user_kick = 61;
    UserBroadcastCmd user_broadcast = 62;

    // 机器人同步
    RobotSyncCmd robot_sync = 71;
  }
}

// ==================== 命令定义 ====================

// 初始化命令
message InitCmd {
  optional InitRequest request = 1;
  optional InitResponse response = 2;
}

// 心跳/回显命令
message EchoCmd {
  optional EchoRequest request = 1;
  optional EchoResponse response = 2;
}

// 通知命令
message NotifyCmd {
  optional NotifyRequest request = 1;
}

// 重新同步命令
message ResyncCmd {
  optional ResyncRequest request = 1;
}

// Actor 注册命令
message ActorRegisterCmd {
  optional ActorRegisterRequest request = 1;
  optional ActorRegisterResponse response = 2;
}

// Actor 注销命令
message ActorUnregisterCmd {
  optional ActorUnregisterRequest request = 1;
  optional ActorUnregisterResponse response = 2;
}

// Actor 心跳命令
message ActorHeartbeatCmd {
  optional ActorHeartbeatRequest request = 1;
  optional ActorHeartbeatResponse response = 2;
}

// Actor 状态命令
message ActorStatusCmd {
  optional ActorStatusRequest request = 1;
  optional ActorStatusResponse response = 2;
}

// Actor 列表命令
message ActorListCmd {
  optional ActorListRequest request = 1;
  optional ActorListResponse response = 2;
}

// Robot 启动命令
message RobotStartCmd {
  optional RobotStartRequest request = 1;
  optional RobotStartResponse response = 2;
}

// Robot 停止命令
message RobotStopCmd {
  optional RobotStopRequest request = 1;
  optional RobotStopResponse response = 2;
}

// Robot 配置命令
message RobotConfigCmd {
  optional RobotConfigRequest request = 1;
  optional RobotConfigResponse response = 2;
}

// Robot 通用命令
message RobotCommandCmd {
  optional RobotCommandRequest request = 1;
  optional RobotCommandResponse response = 2;
}

// Robot 命令结果
message RobotResultCmd {
  optional RobotResultRequest request = 1;
}

// 服务器同步命令
message ServerSyncCmd {
  optional ServerSyncRequest request = 1;
  optional ServerSyncResponse response = 2;
}

// 服务器状态命令
message ServerStatusCmd {
  optional ServerStatusRequest request = 1;
  optional ServerStatusResponse response = 2;
}

// 发送告警命令
message AlertSendCmd {
  optional AlertSendRequest request = 1;
  optional AlertSendResponse response = 2;
}

// 确认告警命令
message AlertAckCmd {
  optional AlertAckRequest request = 1;
  optional AlertAckResponse response = 2;
}

// 踢出用户命令
message UserKickCmd {
  optional UserKickRequest request = 1;
  optional UserKickResponse response = 2;
}

// 广播消息命令
message UserBroadcastCmd {
  optional UserBroadcastRequest request = 1;
  optional UserBroadcastResponse response = 2;
}

// 机器人同步命令
message RobotSyncCmd {
  optional RobotSyncRequest request = 1;
  optional RobotSyncResponse response = 2;
}
